--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -25,8 +25,18 @@ body
 .header-top
 	flex(between)
 .logo
+	+below(768px)
+		width: 115px
+		padding: 10px 0
 	width: 150px
 .header-contact
+	+below(1024px)
+		border 0
+		width: 55%
+		max-width 450px
+		flex(between)
+	+below(768px)
+		display: none
 	flex(around)
 	padding: 25px 0
 	border-left 1px solid #e3e3e3
@@ -46,7 +56,10 @@ body
 //.btn--md-fix
 //.btn--icon
 .header-soc
+	+below(1024px)
+		display: none
 	flex(mid)
+
 .header-soc__el
 	flex(mid)
 	round()
@@ -61,18 +74,36 @@ body
 		size 16px
 
 .header-get-menu
+	+below(1024px)
+		display: none
 	.nav-icon
 		margin-left: 0
 		size 20px
 .header-nav-wrap
 	background: $red
 .header-nav
+	+below(768px)
+		height: auto
+		display: none
+	+above(769px)
+		display: flex!important
 	flex(between)
 	height: 50px
 .header-menu
+	+below(768px)
+		width: 100%
+		fl()
 	flex(between)
 	width: 65%
 .header-menu__el
+	+below(1024px)
+		font-size: 12px
+	+below(768px)
+		padding: 15px 0
+		font-size: 14px!important
+		display: block
+		width: 100%
+		text-align: center
 	color white
 	font-family Acrom
 	tr(all)
@@ -80,6 +111,8 @@ body
 		color rgba(255, 255, 255, 0.6)
 
 .header-basket
+	+below(768px)
+		display: none
 	tr(all)
 	f()
 	width 190px
@@ -107,7 +140,10 @@ body
 	flex(mid)
 	display flex!important
 	margin 10px 0
-
+.slider-main__el
+	tr(all)
+	&:hover
+		box-shadow 0 4px 25px rgba(0, 0, 0, 0.6)
 //for custom navigation
 .slider-control
 	flex(mid)
@@ -123,14 +159,23 @@ body
 		fill white
 
 .slider-main
+	+below(768px)
+		padding: 30px 0
 	background: #db3333
 	padding: 55px 0 80px 0
 	.slick-slide
+		+below(640px)
+			margin: 0 5px;
 		margin: 0 10px;
 	.slick-list
+		+below(640px)
+			margin: 0 -5px
 		margin: 0 -10px
 
 .slider-main__el-wrap
+	+below(640px)
+		padding: 10px
+		flex(mid)
 	background: white
 	br(4px)
 	height: 220px
@@ -139,6 +184,7 @@ body
 	fl()
 	padding-top: 25px
 .slider-main__el-title
+	text-align: center
 	font-family Acrom
 	font-size 15px
 	font-weight 700
@@ -159,28 +205,54 @@ body
 
 
 .slider-control-wrap
+	+below(768px)
+		display: none
 	flex(between)
 	width: 110px
 
 .content-gray
+	+below(960px)
+		padding: 30px 0
 	padding: 70px 0
 	background: #eff1f5
 .section-list__head
+	+below(960px)
+		max-width 620px
+		margin-left: auto
+		margin-right: auto
+		fw()
+		margin-bottom: 20px
 	flex(between)
 	margin-bottom: 40px
 .section-list
+	+below(768px)
+		margin-bottom: 20px
 	margin-bottom: 60px
 .section-list__title
+	+below(960px)
+		width: 100%
+		margin-bottom: 20px
+	+below(640px)
+		font-size: 28px
 	color #000000
 	font-family Acrom
 	font-size 35px
 	font-weight 700
 	letter-spacing 1.75px
 .section-list__cont
+	+below(960px)
+		fw()
+		max-width 640px
+		margin-left: auto
+		margin-right: auto
 	flex(mid)
 	align-items: stretch
 	margin: 0 -10px
 .section-list__el
+	+below(960px)
+		width: 100%
+		margin: 0 0 20px 0
+
 	background: white
 	br(4px)
 	margin: 0 10px
@@ -193,8 +265,22 @@ body
 	padding: 28% 10%
 	bg-full()
 .section-list__el-img-wrap
+	+below(960px)
+		flex-flow row
+		f()
+		justify-content: space-between
 	padding: 10px
+
+.section-list__el-link
+	width: 50%
 .section-list__el-title
+	+below(960px)
+		padding: 0
+		padding-top 20px
+		width: 45%
+	+below(640px)
+		padding-top:5px
+		font-size: 14px
 	font-family Acrom
 	font-size 20px
 	font-weight 700
@@ -210,6 +296,8 @@ body
 	margin-bottom: 20px
 	width: 100%
 .section-list__el-footer
+	+below(960px)
+		padding-top: 10px
 	flex(between)
 	width: 100%
 	padding-top: 20px
@@ -231,6 +319,8 @@ body
 	@extend .btn--md
 	padding: 10px 25px
 .section-list__el-content
+	+below(960px)
+		padding: 10px
 	padding: 0px 25px 30px 25px
 	flex(mid)
 	fl()
@@ -238,31 +328,54 @@ body
 	flex-grow 1
 
 .section-adv
+	+below(768px)
+		max-width 640px
+		margin: 30px auto
+		fw()
 	flex(between)
 	align-items: stretch
 	margin: 90px 0
 .section-adv__el
+	+below(768px)
+		flex-flow row
+		width: 100%
+		margin-bottom: 20px
+		align-items: flex-start
+		justify-content: space-between
 	width: 20%
 	f()
 	align-items: center
 	justify-content: flex-start
 	fl()
+.section-adv__el-wrap
+	+below(768px)
+		width:calc(100% - 100px)
+
 .section-adv__el-icon
+	+below(768px)
+		size 80px
 	size 110px
 	round()
 	background-color #ff8f38
 	margin-bottom: 25px
 	flex(mid)
 	.icon
+		+below(768px)
+			size 40px
 		fill white
 		size 60px
 .section-adv__el-title
+	+below(768px)
+		text-align: left
+		margin-bottom: 5px
 	margin-bottom: 15px
 	text-align: center
 	font-family Acrom
 	font-size 20px
 	font-weight 700
 .section-adv__el-text
+	+below(768px)
+		text-align: left
 	text-align: center
 	opacity 0.8
 	color #000000
@@ -272,11 +385,23 @@ body
 	line-height 25px
 
 .footer-banner
+	+below(768px)
+		padding: 30px 0
+		fl()
+		max-width 640px
+		margin-left: auto
+		margin-right: auto
 	padding: 45px 0 65px 0
 	f()
 .footer-banner-img
+	+below(768px)
+		width: 100%
+		margin-bottom: 20px
+		flex(mid)
 	width 40%
 .footer-banner-cont
+	+below(768px)
+		width: 100%
 	width 55%
 
 .footer-banner-title
@@ -300,9 +425,17 @@ body
 	color white
 //.main-cont
 .footer-wrap
+	+below(640px)
+		fw()
+		padding: 0 20px
 	flex(between)
 	align-items: stretch
 .footer-time
+	+below(768px)
+		width: 45%
+	+below(640px)
+		width: 100%
+		margin-bottom: 20px
 	width: 35%
 .footer-time__title
 	font-family Acrom
@@ -319,6 +452,8 @@ body
 	letter-spacing 0.75px
 	display: inline-block
 .footer-nav
+	+below(768px)
+		display: none
 	width: 40%
 	flex(between)
 	fw()
@@ -332,17 +467,27 @@ body
 	width: 48%
 	margin-bottom: 15px
 .footer-contact
+	+below(768px)
+		width: 195px
+	+below(640px)
+		width: 100%
 	width: 25%
 .footer-contact__mail
 	display: block
 	color white
 	font-family Acrom
 	margin-bottom: 15px
+	tr(all)
+	&:hover
+		color rgba(255, 255, 255, 0.75)
 .footer-contact__phone
 	display: block
 	color white
 	font-size 15px
 	margin-bottom: 30px
+	tr(all)
+	&:hover
+		color rgba(255, 255, 255, 0.75)
 .footer-contact__callback
 	color rgba(255, 255, 255, 0.75)
 	background: #585b65
@@ -356,3 +501,23 @@ body
 		size 20px
 
 //.nav-icon
+
+.header-mobile__toggle
+	+above(769px)
+		display: none!important
+
+.header-mobile__toggle-menu
+	padding: 20px
+	border-left 1px solid #e5e5e5
+	border-right 1px solid #e5e5e5
+	.icon
+		size 22px
+
+.header-mobile__toggle-cart
+	padding: 20px 10px 20px 20px
+	.icon
+		size 22px
+		fill $red
+
+.header-mobile__toggle
+	f()
